Update to the latest catapult server and TS SDK

--- a/config/node/resources/config-finalization.properties.mustache
+++ b/config/node/resources/config-finalization.properties.mustache
@@ -11,4 +11,4 @@ messageSynchronizationMaxResponseSize = 20MB
 
 maxHashesPerPoint = 256
 prevoteBlocksMultiple = 4
-otsKeyDilution = 128
+votingKeyDilution = 128
