--- a/config/node/resources/config-user.properties.mustache
+++ b/config/node/resources/config-user.properties.mustache
@@ -7,3 +7,4 @@ enableDelegatedHarvestersAutoDetection = true
 certificateDirectory = /userconfig/resources/cert
 dataDirectory = /data
 pluginsDirectory = /usr/catapult/lib
+votingKeysDirectory = /data/votingkeys
