--- a/config/node/resources/config-logging-server.properties.mustache
+++ b/config/node/resources/config-logging-server.properties.mustache
@@ -1,7 +1,7 @@
 [console]
 
 sinkType = {{sinkType}}
-level = {{logLevel}}
+level = {{#if serverLogLevel}}{{serverLogLevel}}{{else}}{{logLevel}}{{/if}}
 colorMode = Ansi
 
 [console.component.levels]
@@ -12,7 +12,7 @@ colorMode = Ansi
 [file]
 
 sinkType = {{sinkType}}
-level = {{logLevel}}
+level = {{#if serverLogLevel}}{{serverLogLevel}}{{else}}{{logLevel}}{{/if}}
 directory = logs
 filePattern = catapult_server%4N.log
 rotationSize = 25MB
